<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Athens Next Bus</string>
    <string name="about">About</string>
    <string name="main">BusLines</string>
    <string name="menu_all_routes">All</string>
    <string name="menu_recent_routes">Recent</string>
    <string name="menu_nearby_routes">Nearby</string>
    <string name="menu_agencies">Agencies</string>
    <string name="agencies">Agencies</string>
    <string name="all_routes">All Routes</string>
    <string name="recent_routes">Recent Routes</string>
    <string name="nearby_routes">Nearby Routes</string>
    <string name="suggested_routes">Suggested Itineraries</string>
    <string name="missing_origin">Please select origin</string>
    <string name="missing_destination">Please select destination</string>
    <string name="schedule">Schedule</string>
    <string name="fast_gps">Fast GPS</string>
    <string name="gps_speed">GPS Updates</string>
    <string name="gps_fast">Fast</string>
    <string name="gps_normal">Normal</string>
    <string name="menu_all_schedules">Other Days</string>
    <string name="all_schedules">All Schedules</string>
    <string name="exceptions">Exceptions</string>
    <string name="days_Su">Sunday</string>
    <string name="days_Mo">Monday</string>
    <string name="days_Tu">Tuesday</string>
    <string name="days_We">Wednesday</string>
    <string name="days_Th">Thursday</string>
    <string name="days_Fr">Friday</string>
    <string name="days_Sa">Saturday</string>
    <string name="days_all">Every Day</string>
    <string name="today">Today</string>
    <string name="stops"> Stops</string>
    <string name="stop">Stop</string>
    <string name="name">Name</string>
    <string name="speed">Speed</string>
    <string name="ETA">ETA</string>
    <string name="walkETA">ETA by walking</string>
    <string name="bikeETA">ETA by bike</string>
    <string name="untimed_stops">Stops without data</string>
    <string name="stop_counts">%1$s before, %2$s after</string>
    <string name="map">Map</string>
    <string name="browse">Web</string>
    <string name="straight_distance">Straight Distance</string>
    <string name="bearing">Direction</string>
    <string name="bearing_right">Right %d°</string>
    <string name="bearing_left">Left %d°</string>
    <string name="bearing_straight">Straight ahead</string>
    <string name="route_distance">Route Distance</string>
    <string name="position_from_start">Distance from Start (%s)</string>
    <string name="position_from_end">Distance from End (%s)</string>
    <string name="time_from_start">Expected Time from Start (%s)</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="cancel">Cancel</string>
    <string name="empty"></string>
    <string name="help">Help</string>
    <string name="refresh">Refresh</string>
    <string name="pin_route">Pin</string>
    <string name="unpin_route">Unpin</string>
    <string name="unpin_all">Unpin All</string>
    <string name="loading">Loading &#8230;</string>
    <string name="computing">Computing &#8230;</string>
    <string name="ok">Ok</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="sequence">Sequence</string>
    <string name="empty_sequence">Route Sequence</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="add_stop_after">Add Stop</string>
    <string name="add_stop_before">Prepend Stop</string>
    
    <string name="point_selection">Point Selection</string>
    <string name="add_to_sequence">Add to Sequence</string>
    <string name="set_origin">Set as Origin</string>
    <string name="set_destination">Set as Destination</string>
    <string name="fewer_transfers">Fewer Transfers</string>
    <string name="max_walk">Max Walk (m)</string>
    <string name="walk_speed">Walk Speed (Km/h)</string>
    <string name="fewer_transfers_summary">Prefer itineraries with fewer transfers</string>
    
    <string name="clear">Clear All</string>
    <string name="remove_last">Clear Last</string>
    <string name="remove_first">Clear First</string>
    <string name="walk_leg">Walk %1$s %2$s</string>
    <string name="wait">wait</string>
    <string name="twitter">Twitter</string>    
    <string name="language">Language</string>    
    <string name="device_lang">Device Language</string>    
    <string name="municipality">Municipality</string>    
    <string name="mayor">Mayor</string>    
    <string name="police_phone">Municipal Police</string>    
    <string name="website">Website</string>
    <string name="city_hall">City Hall</string>
    
    <string name="sun">Sun</string>
    <string name="sunrise_sunset">Sunrise/Sunset</string>
    <string name="date">Date</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pezh">ΠΕΖΗ</string>

    <string name="plan">Trip Planner</string>
    <string name="compute">Compute</string>
    <string name="itineraries">Itineraries</string>
    <string name="itinerary">Itinerary</string>
    <string name="last_plan">Last Results</string>
    <string name="swap">Swap</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="plan_time">Time:</string>
    <string name="arrive">Arrive</string>
    <string name="walk">Walk</string>
    <string name="mode_bus">Bus</string>
    <string name="mode_tram">Tram</string>
    <string name="mode_subway">Subway</string>
    <string name="error_convert_route">Cannot find route</string>
    <string name="error_connect">Cannot connect to server.</string>
    
</resources>