<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			    <TextView
			        android:id="@+id/textView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/from"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <TextView
			        android:id="@+id/from"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
					android:layout_weight='1.0'
    			    android:text=""
			        android:textAppearance="?android:attr/textAppearanceMedium" />

			    <ImageButton
			        android:id="@+id/delete_from"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/delete" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			    <TextView
			        android:id="@+id/textView3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
              android:text="@string/to"
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			
			    <TextView
			        android:id="@+id/to"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
					android:layout_weight='1.0'
			        android:text=""
			        android:textAppearance="?android:attr/textAppearanceMedium" />
			      
			    <ImageButton
			        android:id="@+id/delete_to"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/delete" />
			    </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/timeLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plan_time"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/time"
            android:layout_width="30pt"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
        	android:textAppearance="?android:attr/textAppearanceMedium" />            

        <CheckBox
            android:id="@+id/arrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrive" />

	    <ImageButton
	        android:id="@+id/delete_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/delete" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modeView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

</LinearLayout>